--- a/Clase_03/ej1.html
+++ b/Clase_03/ej1.html
@@ -12,27 +12,34 @@
 
 <script>
     
+    // Llamada inicial a la función f_saludar
     f_saludar("Buenas tardes", "Maria");
 
-    /* function f_saludar(p_saludo, p_nombre){
-        var mensaje;
-
-        mensaje = `${p_saludo} ${p_nombre}`;
+    /*
+    // Definición de la función f_saludar usando una declaración de función tradicional
+    function f_saludar(p_saludo, p_nombre) {
+        // Construcción del mensaje de saludo
+        var mensaje = `${p_saludo} ${p_nombre}`;
+        
+        // Mostrar el mensaje en un alerta
         alert(mensaje);
-    } */
+    }
+    */
 
-    /* var f_saludar = function(p_saludo, p_nombre) {
-        var mensaje;
-
-        mensaje = `${p_saludo} ${p_nombre}`;
+    /*
+    // Definición de la función f_saludar usando una expresión de función anónima
+    var f_saludar = function(p_saludo, p_nombre) {
+        var mensaje = `${p_saludo} ${p_nombre}`;
         alert(mensaje);
-    } */
+    }
+    */
 
-    /* var f_saludar = (p_saludar, p_nombre) => {
-        var mensaje;
-
-        mensaje = `${p_saludo} ${p_nombre}`;
+    /*
+    // Definición de la función f_saludar usando una expresión de función de flecha
+    var f_saludar = (p_saludo, p_nombre) => {
+        var mensaje = `${p_saludo} ${p_nombre}`;
         alert(mensaje);
-    } */
+    }
+    */
 
 </script>
