--- a/Clase_03/ej2.html
+++ b/Clase_03/ej2.html
@@ -12,14 +12,20 @@
 
 <script>
 
+    // Inicializar la variable 'numero' con un valor numérico
     var numero = 10;
-    var numero = "diez"
 
-    numero = numero + 1;
+    // Reasignar a la variable 'numero' un valor de tipo cadena
+    var numero = "diez";
+
+    // Intentar sumar 1 al valor actual de 'numero'
+    // Dado que 'numero' es una cadena, se realiza una concatenación en lugar de una suma aritmética
+    numero = numero + 1; // El resultado es "diez1"
     //      ----    ---
     //      "10"    1 => "1";
     //      "101"    
 
+    // Mostrar el valor actual de 'numero' en una ventana emergente
     alert(numero);
     
 </script>
