--- a/Clase_08/ej8_Dibujar_objeto.html
+++ b/Clase_08/ej8_Dibujar_objeto.html
@@ -33,8 +33,8 @@
 <script>
     
     var productos = [
-        { nombre: "Ratón", stock: "10", precio: 15.99 },
-        { nombre: "Teclado", stock: "11", precio: 11 },
+        { nombre: "Ratón", stock: 10, precio: 15.99 },
+        { nombre: "Teclado", stock: 11, precio: 11 },
     ];
 
     var dom_btnCargar = document.getElementById("btnCargar");
